cmake_minimum_required(VERSION 3.0.0)
project(readjpeg VERSION 0.1.0)

include(CTest)
enable_testing()
find_package(ITK REQUIRED)
include( ${ITK_USE_FILE} )
include_directories(${ITK_INCLUDES})
message(STATUS "ITK: ${ITK_INCLUDES}")
message(STATUS "ITK LIBS: ${ITK_LIBRARIES}")
add_executable(readjpeg main.cpp)
target_link_libraries(readjpeg ${ITK_LIBRARIES})

set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)
